--- a/tmp.html
+++ b/tmp.html
@@ -1,37 +1,17 @@
-<div class="bx-soa-cart-total">
-  <div class='bx-soa-cart-total-data show'>
-    <div class="bx-soa-cart-total-line"><span class="bx-soa-cart-t">3 товара</span><span class="bx-soa-cart-d">127 400 руб</span></div>
-    <div class="bx-soa-cart-total-line"><span class="bx-soa-cart-t">Доставка</span><span class="bx-soa-cart-d"><span class="bx-soa-price-free">бесплатно</span></span></div>
-    <div class="bx-soa-cart-total-line bx-soa-cart-total-line-total">
-      <span class="bx-soa-cart-t">Итого</span><span class="bx-soa-cart-d" style="font-size: 27px;">24 242 ₽</span></div>
-    <div class="bx-total-coupon-container">
-      <div class="bx-soa-coupon">
-        <div class="bx-soa-coupon-label"><label>Применить купон:</label></div>
-        <div class="bx-soa-coupon-block promo-cupon-block">
-          <div class="bx-soa-coupon-input"><input class="tanais-form-control bx-ios-fix" type="text"><span class="bx-soa-coupon-btn"></span></div>
-        </div><span class="bx-soa-coupon-item"></span>
+<div data-property-id-row="4" class="tanais-form-group bx-soa-location-input-container"><label class="bx-soa-custom-label" for="soa-property-4"><span class="bx-authform-starrequired">*</span> Город</label>
+  <div id="sls-40005" class="bx-sls ">
+    <div class="dropdown-block bx-ui-sls-input-block tanais-form-control">
+      <span class="dropdown-icon"></span>
+      <input type="text" autocomplete="off" name="ORDER_PROP_4" value="" class="dropdown-field" placeholder="Введите название ..." style="display: none;">
+      <div style="margin: 0px; padding: 0px; border: medium none; position: relative;" class="bx-ui-sls-container"><input type="text" disabled="disabled" autocomplete="off" class="bx-ui-sls-route" style="padding: 0px; margin: 0px;"><input type="text" autocomplete="off" value="" class="bx-ui-sls-fake" placeholder="Введите название ..."></div>
+      <div class="dropdown-fade2white"></div>
+      <div class="bx-ui-sls-loader"></div>
+      <div class="bx-ui-sls-clear" title="Отменить выбор" style="display: none;"></div>
+      <div class="bx-ui-sls-pane" style="overflow: hidden auto;">
+        <div class="bx-ui-sls-variants"></div>
       </div>
     </div>
-    <div class='text-sm leading-tight'>Добавьте к заказу товаров на <b class='text-green-500'>40₽</b>,</br> чтобы получить бесплатную доставку</div>
-  </div>
-  <div class='bx-soa-cart-total-form hide'>
-    <a onclick="BX.Sale.OrderAjaxComponent.buyOneClickFormHide();" class="bx-soa-cart-total-form-close-btn"></a>
-    <div class="bx-soa-cart-total-form-title">
-      <p>Покупка в 1 клик</p>
+    <div class="bx-ui-sls-error-message">
     </div>
-    <div class="bx-soa-cart-total-form-message-box"></div>
-    <div class="bx-soa-cart-total-form-field">
-      <span>ФИО: <i>*</i></span>
-      <input type="text" required="" class="tanais-form-control" name="full_name">
-    </div>
-    <div class="bx-soa-cart-total-form-field">
-      <span>Телефон: <i>*</i></span>
-      <input type="text" required="" class="tanais-form-control" name="phone" autocomplete="tel">
-    </div>
-    <div class="bx-soa-cart-total-form-field">
-      <span>E-mail: <i>*</i></span>
-      <input type="email" required="" class="tanais-form-control" name="email">
-    </div>
-    <a onclick="BX.Sale.OrderAjaxComponent.buyOneClickFormSend(this);" class="btn btn-default">Купить</a>
   </div>
 </div>
